--- a/ddbar/ddbar.tex
+++ b/ddbar/ddbar.tex
@@ -390,4 +390,13 @@ fact that $\partial$ and $\dbar$ commute one final time, we find that
 $\partial\alpha$ is $\dbar$-exact, i.e. $[\partial\alpha] = 0$
 \end{proof}
 %
+The idea of the Fr\"olicher spectral sequence is that we can compute the
+cohomology of $d = \partial + \dbar$ in terms of the cohomology of $\partial$
+and $\dbar$ themselves. However, for general complex manifolds, this is hard,
+since the differentials and cohomology beyond the $E_1$ page become much
+more complicated than the ones on the $E_0$ and $E_1$ pages, which are all
+objects we are familiar with, and are relatively easy to compute with. What
+Theorem 1.1 tells us is that in the case that $X$ is compact K\"ahler, this
+is enough.
+%
 \end{document}
