--- a/ddbar/ddbar.tex
+++ b/ddbar/ddbar.tex
@@ -360,8 +360,7 @@ The proof for all three cases is much the same, so we do just the one where
 $\eta = \dbar\alpha$ is $\dbar$-exact. By the Hodge decomposition, we write
 $\alpha = \beta + \Delta\gamma$, with $\beta$ harmonic. Since
 $\Delta = 2\Delta_{\dbar}$, and $\beta$ is $\Delta_{\dbar}$-harmonic if and only
-if $\dbar\beta = \dbar^*\beta = 0$, we have that $\dbar\beta = 0$. Then
-using Lemma 7.8, we compute
+if $\dbar\beta = \dbar^*\beta = 0$, we have that $\dbar\beta = 0$. We then compute
 \begin{align*}
 \eta &= \dbar\alpha \\
 &= \dbar(\beta + \Delta\gamma) \\
