--- a/ddbar/ddbar.tex
+++ b/ddbar/ddbar.tex
@@ -385,7 +385,7 @@ $[\alpha]$ is a Dolbeault cohomology class, we know that $\alpha$ is $\dbar$-clo
 Therefore, $\partial\alpha$ is both $\dbar$ and $\partial$ closed, since $\partial$
 and $\dbar$ anticommute. Then by the $\partial\dbar$ lemma, we have that
 $\partial\alpha = \partial\dbar\eta$ for some $\eta$. Therefore, using the
-fact that $\partial$ and $\dbar$ commute one final time, we find that
+fact that $\partial$ and $\dbar$ anticommute one final time, we find that
 $\partial\alpha$ is $\dbar$-exact, i.e. $[\partial\alpha] = 0$
 \end{proof}
 %
